sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__large-offset-small-limit.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      ORDER BY price
      LIMIT 5 OFFSET 1000;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_price

BYTECODE
addr  opcode            p1  p2  p3  p4                p5  comment
   0  Init               0  19   0                     0  Start at 19
   1  Integer            5   4   0                     0  r[4]=5; LIMIT counter
   2  Integer         1000   5   0                     0  r[5]=1000
   3  MustBeInt          5   0   0                     0  ; OFFSET counter
   4  OffsetLimit        4   6   5                     0  if r[4]>0 then r[6]=r[4]+max(0,r[5]) else r[6]=(-1); OFFSET + LIMIT
   5  IfNot              4  18   0                     0  if !r[4] goto 18
   6  OpenRead           0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   7  OpenRead           1   3   0  k(2,B)             0  index=idx_products_price, root=3, iDb=0
   8  Rewind             1  18   0                     0  Rewind index idx_products_price
   9    DeferredSeek     1   0   0                     0
  10    IfPos            5  17   1                     0  r[5]>0 -> r[5]-=1, goto 17
  11    IdxRowId         1   1   0                     0  r[1]=cursor 1 for index idx_products_price.rowid
  12    Column           0   1   2                     0  r[2]=products.name
  13    Column           1   0   3                     0  r[3]=idx_products_price.price
  14    RealAffinity     3   0   0                     0
  15    ResultRow        1   3   0                     0  output=r[1..3]
  16    DecrJumpZero     4  18   0                     0  if (--r[4]==0) goto 18
  17  Next               1   9   0                     1
  18  Halt               0   0   0                     0
  19  Transaction        0   1   7                     0  iDb=0 tx_mode=Read
  20  Goto               0   1   0                     0
