sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__limit-without-order.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      LIMIT 5;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  12   0                     0  Start at 12
   1  Integer          5   4   0                     0  r[4]=5; LIMIT counter
   2  IfNot            4  11   0                     0  if !r[4] goto 11
   3  OpenRead         0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   4  Rewind           0  11   0                     0  Rewind table products
   5    RowId          0   1   0                     0  r[1]=products.rowid
   6    ColumnRange    0   1   2  2                  0  r[2..3]=products.columns[1..2]
   7    RealAffinity   3   0   0                     0
   8    ResultRow      1   3   0                     0  output=r[1..3]
   9    DecrJumpZero   4  11   0                     0  if (--r[4]==0) goto 11
  10  Next             0   5   0                     0
  11  Halt             0   0   0                     0
  12  Transaction      0   1   7                     0  iDb=0 tx_mode=Read
  13  Goto             0   1   0                     0
