sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-desc.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, stock
      FROM products
      ORDER BY stock DESC;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_stock_desc
