sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-expression.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price, stock, price * stock AS total_value
      FROM products
      ORDER BY price * stock DESC;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  23   0                     0  Start at 23
   1  SorterOpen       0   1   0  k(1,-Binary)       0  cursor=0
   2  OpenRead         1   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   3  Rewind           1  15   0                     0  Rewind table products
   4    Column         1   2  12                     0  r[12]=products.price
   5    RealAffinity  12   0   0                     0
   6    Column         1   4  13                     0  r[13]=products.stock
   7    Multiply      12  13   7                     0  r[7]=r[12]*r[13]
   8    RowId          1   8   0                     0  r[8]=products.rowid
   9    ColumnRange    1   1   9  2                  0  r[9..10]=products.name..price
  10    RealAffinity  10   0   0                     0
  11    Column         1   4  11                     0  r[11]=products.stock
  12    MakeRecord     7   5   6                     0  r[6]=mkrec(r[7..11])
  13    SorterInsert   0   6   0  0                  0  key=r[6]
  14  Next             1   4   0                     1
  15  OpenPseudo       2   6   5                     0  5 columns in r[6]
  16  SorterSort       0  22   0                     0
  17    SorterData     0   6   2                     0  r[6]=data
  18    ColumnRange    2   1   1  4                  0  r[1..4]=pseudo.column 1..column 4
  19    Column         2   0   5                     0  r[5]=pseudo.column 0
  20    ResultRow      1   5   0                     0  output=r[1..5]
  21  SorterNext       0  17   0                     0
  22  Halt             0   0   0                     0
  23  Transaction      0   1   7                     0  iDb=0 tx_mode=Read
  24  Goto             0   1   0                     0
