sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-index-with-range.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      WHERE price BETWEEN 10 AND 100
      ORDER BY price;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_price (price>=? AND price<=?)
