sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-nullable-desc.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, department
      FROM employees
      ORDER BY department DESC;
info:
  statement_type: SELECT
  tables:
  - employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN employees USING INDEX idx_employees_department
