sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-single-column.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      ORDER BY name;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  20   0                     0  Start at 20
   1  SorterOpen       0   1   0  k(1,Binary)        0  cursor=0
   2  OpenRead         1   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   3  Rewind           1  11   0                     0  Rewind table products
   4    Column         1   1   5                     0  r[5]=products.name
   5    RowId          1   6   0                     0  r[6]=products.rowid
   6    Column         1   2   7                     0  r[7]=products.price
   7    RealAffinity   7   0   0                     0
   8    MakeRecord     5   3   4                     0  r[4]=mkrec(r[5..7])
   9    SorterInsert   0   4   0  0                  0  key=r[4]
  10  Next             1   4   0                     1
  11  OpenPseudo       2   4   3                     0  3 columns in r[4]
  12  SorterSort       0  19   0                     0
  13    SorterData     0   4   2                     0  r[4]=data
  14    Column         2   1   1                     0  r[1]=pseudo.column 1
  15    Column         2   0   2                     0  r[2]=pseudo.column 0
  16    Column         2   2   3                     0  r[3]=pseudo.column 2
  17    ResultRow      1   3   0                     0  output=r[1..3]
  18  SorterNext       0  13   0                     0
  19  Halt             0   0   0                     0
  20  Transaction      0   1   7                     0  iDb=0 tx_mode=Read
  21  Goto             0   1   0                     0
