sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-with-index.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      ORDER BY price;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_price
