sqlite/conformance/sqlite-sqltests/snapshot_tests/sorting/snapshots/sorting__order-by-with-limit.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, price
      FROM products
      ORDER BY price DESC
      LIMIT 10;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_price
